tech/operation/k8项目/k8s/mysql-deployment.yaml
apiVersion: v1
# 可以理解为集群 组
kind: Service
metadata:
  # 可以从内部调用
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
#标准管理器
#Deployment 是一个更高级的概念，它管理 ReplicaSet，
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
# 对象规约
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  # 更新策略
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      #容器
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
